Version 0.2:
	* Highlight Specified lines.

Version 0.1:
	* Extension presentation.